--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,10 @@ jobs:
         include:
           - rust: stable
             os: windows-latest
-          - rust: stable
-            os: macos-latest
     runs-on: ${{ matrix.os }}
-    #env:
-      #RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
+    env:
+      RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
     steps:
-    - name: Set environment variable
-      if: ${{ matrix.os == 'ubuntu-latest'}} || ${{ matrix.os == 'windows-latest'}}
-      run: |
-        echo ""RUSTFLAGS"=-"C link-arg=-fuse-ld=lld -D warnings"" >> "$GITHUB_ENV"
     - name: Free disk space
       if: ${{ matrix.os == 'ubuntu-latest'}}
       run: |
