--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /usr/share/dotnet
         df -h
+    - name: Install lld
+      run: sudo apt-get install lld
     - uses: actions/checkout@v4
       with:
         submodules: true
