--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,11 @@ jobs:
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /usr/share/dotnet
         df -h
-    - name: Install LLVM and Clang
+    - name: Install lld on Linux
+      if: ${{ matrix.os == 'ubuntu-latest'}}
+      run: sudo apt-get install lld
+    - name: Install lld on Windows
+      if: ${{ matrix.os == 'windows-latest'}}
       uses: KyleMayes/install-llvm-action@v2
       with:
         version: "10.0"
