Update linker on Windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,6 @@ tracing = { version = "0.1", default-features = false }
 tracing-core = { version = "0.1", default-features = false }
 tracing-subscriber = { version = "0.3", default-features = false }
 url = { version = "2.2", default-features = false }
+
+[target.x86_64-pc-windows-msvc]
+linker = "lld-link.exe"
