--- a/.github/workflows/cargo-audit.yml
+++ b/.github/workflows/cargo-audit.yml
@@ -4,21 +4,20 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
+      - '**.Cargo.toml'
+      - '**.Cargo.lock'
       - '.github/workflows/cargo-audit.yml'
   pull_request:
     branches: [ main ]
     paths:
-      - '**/Cargo.toml'
-      - '**/Cargo.lock'
+      - '**.Cargo.toml'
+      - '**.Cargo.lock'
       - '.github/workflows/cargo-audit.yml'
   schedule:
     - cron: '0 0 * * *'  # Run daily at midnight UTC
 
 permissions:
     contents: read
-    checks: write
 
 jobs:
   cargo-audit:
